[package]
name = "twyne"
description = "A Rust library for parsing Twine story/game export files (JSON format)"
readme = "README.md"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/twyne"
documentation = "https://docs.rs/twyne/"
categories = ["games", "parsing"]
keywords = ["Twine", "IF", "MUDs", "MUSHes", "JSON"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "twyne"

[dependencies]
html_parser = "0.6.3"
semver = "1.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
